[package]
name = "markdown-reader"
version = "0.1.0"
authors = ["Fei <33122873+pheihuihui@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
markdown = "1.0.0-alpha.16"
wasm-bindgen = "0.2.92"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
